--- a/PR/HTML-content/quiz.css
+++ b/PR/HTML-content/quiz.css
@@ -26,6 +26,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-top: 100px;
   }
   .quiz-container {
     background-color: transparent;
