--- a/PR/options/options.css
+++ b/PR/options/options.css
@@ -8,6 +8,11 @@ body {
   background-color: #dceefc !important;
 }
 
+header {
+    padding-bottom: 20px;
+    box-shadow: 3px 3px 15px black;
+}
+
 header h1.logo-text {
   font-family: 'Pixelify Sans';
   font-size: 25px;
