--- a/PR/style.css
+++ b/PR/style.css
@@ -108,8 +108,10 @@ input{
     font-size:15px;
 }
 .input-group{
+    margin: 5px 0px 5px 0px;
     padding:1% 0;
     position:relative;
+
 
 }
 .input-group i{
@@ -394,4 +396,13 @@ button:hover{
         font-weight: 100;
      
     }
+}
+
+.miniErrortext {
+    position: absolute; 
+    font-size: x-small;
+    color:red;
+    text-align: left;
+    margin-top: 30px;
+    margin-bottom: 0px;
 }
